--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,25 +1,21 @@
 name: Build on PR
 
-on:
+ON:
   pull_request:
     branches:
       - master
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs:on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-      
-      - name: Install Dependencies
-        run: npm install
-      
-      - name: Generate prisma client
-        run: npm run db:generate
-        
-      - name: Run Build
+      - name: set up Node.js
+        uses: actions/setup-node@v2
+      with:
+        node-version: 12
+      - name: install dependencies
+        run: npm install 
+      - name: build
         run: npm run build
+
