--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,21 +1,22 @@
 name: Build on PR
 
-ON:
+on:
   pull_request:
     branches:
       - master
 
 jobs:
   build:
-    runs:on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: set up Node.js
-        uses: actions/setup-node@v2
-      with:
-        node-version: 12
-      - name: install dependencies
-        run: npm install 
-      - name: build
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+      
+      - name: Install Dependencies
+        run: npm install
+        
+      - name: Run Build
         run: npm run build
-
